adding test coverage for aggregate package