@@ -1,6 +1,5 @@
 package com.dewdrop.aggregate;
 
-import com.dewdrop.aggregate.proxy.AggregateProxyFactory;
 import com.dewdrop.api.result.Result;
 import com.dewdrop.command.CommandMapper;
 import com.dewdrop.read.StreamDetails;
@@ -11,6 +10,7 @@ import com.dewdrop.structure.api.Command;
 import com.dewdrop.structure.api.Event;
 import com.dewdrop.structure.events.CorrelationCausation;
 import com.dewdrop.utils.AggregateIdUtils;
+import com.dewdrop.utils.AggregateUtils;
 import com.dewdrop.utils.AssignCorrelationAndCausation;
 import com.dewdrop.utils.CommandHandlerUtils;
 import java.lang.reflect.Method;
@@ -37,7 +37,7 @@ public class AggregateStateOrchestrator {
     public Result<Object> executeCommand(Command command) {
         Optional<Method> commandHandlerMethod = commandMapper.getCommandHandlersThatSupportCommand(command);
 
-        if (commandHandlerMethod.isEmpty()) {return Result.of(new ArrayList<>());}
+        if (commandHandlerMethod.isEmpty()) { return Result.of(new ArrayList<>()); }
 
         return processCommand(command, commandHandlerMethod.get());
     }
@@ -45,19 +45,18 @@ public class AggregateStateOrchestrator {
     public Result<Object> executeSubsequentCommand(Command command, CorrelationCausation previous) {
         Optional<Method> commandHandlerMethod = commandMapper.getCommandHandlersThatSupportCommand(command);
 
-        if (commandHandlerMethod.isEmpty()) {return Result.of(new ArrayList<>());}
+        if (commandHandlerMethod.isEmpty()) { return Result.of(new ArrayList<>()); }
 
         command = AssignCorrelationAndCausation.assignTo(previous, command);
         return processCommand(command, commandHandlerMethod.get());
     }
 
     private Result<Object> processCommand(Command command, Method commandHandlerMethod) {
-        Optional<AggregateRoot> optAggregateRoot = AggregateProxyFactory.createFromCommandHandlerMethod(commandHandlerMethod);
+        Optional<AggregateRoot> optAggregateRoot = AggregateUtils.createFromCommandHandlerMethod(commandHandlerMethod);
 
         if (optAggregateRoot.isPresent()) {
             AggregateRoot aggregateRoot = optAggregateRoot.get();
-            log.debug("Processing command {}", command.getClass()
-                .getSimpleName());
+            log.debug("Processing command {}", command.getClass().getSimpleName());
             aggregateRoot = getById(command, aggregateRoot);
             aggregateRoot = executeCommand(command, commandHandlerMethod, aggregateRoot);
             aggregateRoot = save(aggregateRoot);
@@ -74,9 +73,7 @@ public class AggregateStateOrchestrator {
 
     private AggregateRoot executeCommand(Command command, Method handler, AggregateRoot aggregateRoot) {
         try {
-            Object instance = handler.getDeclaringClass()
-                .getDeclaredConstructor()
-                .newInstance();
+            Object instance = handler.getDeclaringClass().getDeclaredConstructor().newInstance();
             Optional<?> result = CommandHandlerUtils.executeCommand(instance, handler, command, aggregateRoot);
             if (result.isPresent()) {
                 if (result.get() instanceof List) {
@@ -98,12 +95,7 @@ public class AggregateStateOrchestrator {
         Optional<UUID> aggregateId = AggregateIdUtils.getAggregateId(command);
         if (aggregateId.isPresent()) {
             StreamDetails streamDetails = streamDetailsFactory.fromAggregateRoot(aggregateRoot, aggregateId.get());
-            StreamStoreGetByIDRequest request = StreamStoreGetByIDRequest.builder()
-                .streamDetails(streamDetails)
-                .aggregateRoot(aggregateRoot)
-                .id(aggregateId.get())
-                .command(command)
-                .create();
+            StreamStoreGetByIDRequest request = StreamStoreGetByIDRequest.builder().streamDetails(streamDetails).aggregateRoot(aggregateRoot).id(aggregateId.get()).command(command).create();
             aggregateRoot = streamStoreRepository.getById(request);
         }
         return aggregateRoot;
